# Galvomotor

./: .gitignore  LICENSE  PRODUCT.md  README.md  launch_gui.vbs  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
config_files/: README.md
docs/superpowers/plans/: 2026-07-06-galvo-tolerance-connection.md
docs/superpowers/specs/: 2026-06-30-canon-galvo-controller-design.md  2026-07-06-galvo-tolerance-connection-design.md
notebooks/: 240923-GalvoScan-SNOM.ipynb  240923-ParabolaScan-SNOM.ipynb  260220 - Galvo-Parabolic-snom-scan.ipynb  GM-2020-ftheta-10mm-fo4.tsc  galvo_debug.py  galvo_functions.py  gbdsp.hex  probe_pixel_time.py
src/galvo_gui/: __init__.py  __main__.py
src/galvo_gui/gui/: __init__.py  main_window.py  panel_manual.py  panel_scan.py  theme.py  widgets.py
src/galvo_gui/io/: save.py
src/galvo_gui/motion/: __init__.py  base.py  galvo_nea.py  mock.py
src/galvo_gui/motion/canon/: __init__.py  backend.py  gb511.py  rs232.py
src/galvo_gui/workers/: __init__.py  scan.py
tests/: test_app_icon.py  test_canon_backend.py  test_canon_gb511.py  test_canon_rs232.py  test_config_bundle.py  test_galvo_calibration.py  test_mock_backend.py  test_motion_ui.py  test_save.py  test_scan_grid.py  test_scan_worker.py
